cluster/core/monitoring/kube-prometheus-stack/ingress-route.yaml
---
apiVersion: ingressroutes.traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: prometheus-prometheus
          namespace: monitoring
          port: 9090
          scheme: http
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "prometheus-${SECRET_DOMAIN/./-}-tls"
---
apiVersion: ingressroutes.traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: prometheus-alertmanager
          namespace: monitoring
          port: 9093
          scheme: http
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "alertmanager-${SECRET_DOMAIN/./-}-tls"
